# agent_smith

./: README.md  agent_config.yaml  pyproject.toml
prompts/needs_reply/: user_1.txt  user_2.txt  user_3.txt  user_4.txt
src/agent_mail/: cli.py  email_agent.py  gmail_api.py  gmail_auth.py  memories.py  models.py  needs_reply_classifier.py  settings.py  utils.py
src/agent_mail/prompts/contact_memory/: post_system.txt  post_user.txt  pre_system.txt  pre_user.txt
src/agent_mail/prompts/generate_email/: system.txt  user.txt
src/agent_mail/prompts/needs_reply/: system.txt  user_5.txt
src/agent_mail/prompts/style_memory/: offline_system.txt  offline_user.txt  online_system.txt  online_user.txt  query_system.txt  query_user.txt
src/agent_mail/prompts/thread_memory/: system.txt  user.txt
